<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name"> Jump!</string>
    <string name="app_id">781629512249</string>
    <string name="act_main">MainActivity</string>
    <string name="act_stats">StatsActivity</string>
    
    <!-- MainActivity -->
    <string name="act_main_title"> Jump! </string>
     <string name="btn_start"> Start </string>
    <string name="btn_sound"> Sound </string>
    <string name="btn_stats"> Stats </string>
    <string name="btn_info"> Info </string>
    <string name="btn_game_services"> Google Game Services </string>
    <string name="dialog_img"> AndEngine Logo </string>
    <string name="dialog_txt"> Created with AndEngine! </string>
    <string name="txt_start"> Tap to start </string>
    
    <!-- LevelSelectorActivity -->
    <string name="img_lvls"> Level names </string>
    <string name="txt_lvl1"> Slander - Vanguard </string>
    <string name="txt_lvl2"> Slander - New Monarchy </string>
    <string name="txt_lvl3"> Coming Soon! (ParagonX9 - Chaos Twilight) </string>
    
    <!-- StatsActivity -->
    <string name="act_stats_title"> Stats </string>
    <string name="btn_menu"> Menu </string>
    <string name="txt_level1"> Level 1 Reached </string>
    <string name="txt_level1_value"> 0 </string>
    <string name="txt_level2"> Level 2 Reached </string>
    <string name="txt_level2_value"> 0 </string>
    <string name="txt_should_sign_in"> Sign in to Google to see more stats! </string> 
    
    <!-- Google Game Services -->
	<string name="sign_in">Sign in with Google</string>
	<string name="sign_out">Sign out</string>
	<string name="you_are_signed_in">You are signed in with Google.</string>
    <string name="sign_in_to_upload_this_score">Sign in now to upload this score, save your achievements and share your progress with friends.</string>
    <string name="signin_other_error">There was an issue with sign in.  Please try again later.</string>
    <string name="achievements_not_available">Please sign in to view achievements.</string>
    <string name="leaderboards_not_available">Please sign in to view leaderboards.</string>
    <string name="show_achievements">Show Achievements</string>
    <string name="show_leaderboards">Show Leaderboards</string>

</resources>
