<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="@drawable/background">

    <TextView
        android:id="@+id/txt_title_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_sound"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:text="@string/act_main_title"
        android:textSize="72sp" />

    <ImageButton
        android:id="@+id/btn_info"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_above="@+id/txt_title_main"
        android:layout_alignParentRight="true"
        android:layout_marginRight="14dp"
        android:background="@null"
        android:contentDescription="@string/btn_sound"
        android:scaleType="centerCrop"
        android:src="@drawable/btn_info" />

    <ImageButton
        android:id="@+id/btn_game_services"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:background="@null"
        android:contentDescription="@string/btn_game_services"
        android:scaleType="centerCrop"
        android:src="@drawable/btn_game_services" />

    <TextView
        android:id="@+id/txt_player"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="16dp"
        android:layout_toRightOf="@+id/btn_game_services"
        android:text="@string/sign_in"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/txt_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="14dp"
        android:text="@string/txt_start"
        android:textSize="22sp" />

    <ImageButton
        android:id="@+id/btn_achievements"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/btn_info"
        android:background="@null"
        android:contentDescription="@string/show_achievements"
        android:scaleType="centerCrop"
        android:src="@drawable/btn_achievements" />

    <ImageButton
        android:id="@+id/btn_leaderboards"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_above="@+id/txt_title_main"
        android:layout_toLeftOf="@+id/btn_achievements"
        android:background="@null"
        android:contentDescription="@string/show_leaderboards"
        android:scaleType="centerCrop"
        android:src="@drawable/btn_leaderboards" />

    <ImageButton
        android:id="@+id/btn_sound"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_marginRight="14dp"
        android:layout_toLeftOf="@+id/btn_leaderboards"
        android:background="@null"
        android:contentDescription="@string/btn_info"
        android:scaleType="centerCrop" />

</RelativeLayout>
