<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background" >

    <ImageButton
        android:id="@+id/dialog_btn_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp"
        android:background="@null"
        android:contentDescription="@string/btn_menu"
        android:src="@drawable/btn_menu" />

    <ImageButton
        android:id="@+id/dialog_btn_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/dialog_img"
        android:background="@null"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/dialog_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/dialog_btn_menu"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/dialog_txt"
        android:textColor="#FFF" />
 
</RelativeLayout>