<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background" >
    

    <TextView
        android:id="@+id/dialog2_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:text="@string/dialog_txt"
        android:textColor="#FFF" />

    <ImageButton
        android:id="@+id/dialog2_btn_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="21dp"
        android:background="@null"
        android:contentDescription="@string/btn_menu"
        android:src="@drawable/btn_menu" />

    <ImageButton
        android:id="@+id/dialog2_btn_stats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/dialog2_btn_menu"
        android:layout_alignLeft="@+id/dialog2_btn_menu"
        android:background="@null"
        android:contentDescription="@string/btn_stats"
        android:src="@drawable/btn_stats" />
 
</RelativeLayout>