<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:orientation="vertical"
android:background="@drawable/background" >

        <ViewFlipper
            android:id="@+id/viewflipper"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >
            
 	    	<!-- Level 1 -->
            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/txt_lvl1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="14dp"
                    android:text="@string/txt_lvl1" />

                <ImageView
                    android:id="@+id/img_lvl1"
                    android:layout_width="250dp"
                    android:layout_height="250dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="14dp"
                    android:contentDescription="@string/img_lvls"
                    android:src="@drawable/level1_not_completed" />

            </RelativeLayout>
            
 	    	<!-- Level 2 -->
            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/txt_lvl2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="14dp"
                    android:text="@string/txt_lvl2" />

                <ImageView
                    android:id="@+id/img_lvl2"
                    android:layout_width="250dp"
                    android:layout_height="250dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="14dp"
                    android:contentDescription="@string/img_lvls"
                    android:src="@drawable/level2_not_completed" />

            </RelativeLayout>
            
 	    	<!-- Level 3 -->
            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/txt_lvl3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="14dp"
                    android:text="@string/txt_lvl3" />

                <ImageView
                    android:id="@+id/img_lvl3"
                    android:layout_width="250dp"
                    android:layout_height="250dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="14dp"
                    android:contentDescription="@string/img_lvls"
                    android:src="@drawable/level3_not_completed" />
                
                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/img_lvl3"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="46dp"
                    android:src="@drawable/level_locked" />

            </RelativeLayout>
            
           
        </ViewFlipper>
</LinearLayout>